--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,15 @@ before_install:
 
 script:
   - docker run -e CI=true stephengrider/docker-react npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "eu-north-1"
+  app: "frontend"
+  env: "Frontend-env"
+  bucket_name: "elasticbeanstalk-eu-north-1-533267379549"
+  bucket_path: "frontend"
+  on:
+    branch: master
+  access_key_id: $AWS_Access_Key
+  secret_access_key: $AWS_Secret_access_key
